more generalize code

--- a/index.html
+++ b/index.html
@@ -6,32 +6,19 @@
 </head>
 
 <body>
-  <h1>JavaScript Progress Bar</h1>
-  <div id="myProgress">
-    <div id="myBar1">10%</div>
-  </div>
-  <div class="space"></div>
-  <div id="myProgress">
-    <div id="myBar2">10%</div>
-  </div>
-  <div class="space"></div>
-
-  <div id="myProgress">
-    <div id="myBar3">10%</div>
+  <div id="main">
+   
   </div>
 
-  <br>
-  <!-- <button onclick="frame()">Click Me</button> -->
-
-  <select id="prg" onchange="sel()">
-    <option value="Progress1">Progress 1</option>
-    <option value="Progress2">Progress 2</option>
-    <option value="Progress3">Progress 3</option>
-  </select>
-  <button id="button1" onclick="frame(document.getElementById('button1').innerHTML)"></button>
+  <select id="prg">
+      <option value="Progress1">Progress 1</option>
+      <option value="Progress2">Progress 2</option>
+      <option value="Progress3">Progress 3</option>
+    </select>
+  <!-- <button id="button1" onclick="frame(document.getElementById('button1').innerHTML)"></button>
   <button id="button2" onclick="frame(document.getElementById('button2').innerHTML)"></button>
   <button id="button3" onclick="frame(document.getElementById('button3').innerHTML)"></button>
-  <button id="button4" onclick="frame(document.getElementById('button4').innerHTML)"></button>
+  <button id="button4" onclick="frame(document.getElementById('button4').innerHTML)"></button> -->
   <script src="main.js"></script>
 </body>
 
