more logical code

--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <div id="main">
-   
-  </div>
-
-  <select id="prg">
-      <option value="Progress1">Progress 1</option>
-      <option value="Progress2">Progress 2</option>
-      <option value="Progress3">Progress 3</option>
-    </select>
-  <!-- <button id="button1" onclick="frame(document.getElementById('button1').innerHTML)"></button>
-  <button id="button2" onclick="frame(document.getElementById('button2').innerHTML)"></button>
-  <button id="button3" onclick="frame(document.getElementById('button3').innerHTML)"></button>
-  <button id="button4" onclick="frame(document.getElementById('button4').innerHTML)"></button> -->
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div id="main">
+      </div>
+    </div>
+  </body>
   <script src="main.js"></script>
-</body>
-
 </html>
